<resources>
    <string name="app_name">TrainCenter</string>
    <string name="my_train">我的训练</string>
    <string name="please_select_train_plan">请选择一项训练</string>
    <string name="start_new_train">开始新的训练</string>
    <string name="train_center">训练中心</string>
    <string name="train_detail">训练详情</string>
    <string name="day_train_record_stag">%1$s 第 %2$d 周 第 %3$d 天</string>
    <string name="remind_train_first_text">系统的训练可以提升你在跑步\n中的表现，快开始训练吧！</string>
    <string name="train_start">开始训练</string>

    <string name="hidtory_train_start_date">开始 %1$s</string>
    <string name="hidtory_train_end_date">结束 %1$s</string>

    <string name="train_detail_number_weekly">第%1$d周</string>
    <string name="day_train_status_done">(已完成)</string>

    <string name="train_record_complete_percent">已完成</string>
    <string name="day_train_record_status_finish">完成</string>
    <string name="day_train_record_statis_un_finish">未完成</string>
    <!--################### 数据的db 积累    #########################-->
    <!--训练项目大的分类-->


    <!--###### 标记训练计划dialog #####-->

    <string name="dialog_day_train_plan_is_complete">是否将今天的训练计划标记为已完成</string>

    <string name="dialog_train_plan_is_complete">提前结束本次训练计划,将不再记录本次训练进度，是否结束</string>
    <string name="cancel">否</string>
    <string name="day_train_plan_record_marked">标记</string>
    <string name="train_plan_recode_finished">结束</string>
    <string name="train_mileage">训练里程(km)</string>
    <string name="train_days">训练天数</string>
    <string name="train_finish">结束训练</string>
    <string name="train_finished">训练已结束</string>

    <string name="today">今天</string>
    <string name="train_complete_rate">完成率</string>
    <string name="assing_train_plan">%1$s</string>
    <string name="train_plan_already_assgn">已定制</string>

    <string name="notification_title">训练中心</string>
    <string name="notificaiton_train_content">今日训练还未完成，凡事贵在坚持。加油！</string>
    <string name="this_train_record_finish">此训练计划已经结束</string>
    <array name="weekdays">
        <item>第一周</item>
        <item>第二周</item>
        <item>第三周</item>
        <item>第四周</item>
        <item>第五周</item>
        <item>第六周</item>
        <item>第七周</item>
        <item>第八周</item>
    </array>

    <array name="simple_weekdays">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>

    </array>
</resources>
