<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/rl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ImageView
        android:id="@+id/icon_train_plan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/training_widget_icon"
        android:layout_centerInParent="true"
        />

    <TextView
        android:id="@+id/train_center_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:text="@string/train_center"
        style="@style/train_init_title"
        />


    <!--<view-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:background="@color/default_font_color_white"-->
        <!--android:layout_above="@+id/train_center_init_remind"-->
         <!--/>-->

    <TextView
        android:id="@+id/train_center_init_remind"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:text="@string/train_detail"
        android:layout_marginBottom="20dp"
        android:background="@drawable/train_detail"
        style="@style/mytrain_trainplan_list_item"
        android:layout_alignParentBottom="true"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_new_train"
        android:textAlignment="center"
        style="@style/train_small_remide_green"
        android:layout_below="@+id/icon_train_plan"
        android:layout_alignParentStart="true" />

</RelativeLayout>