<?xml version="1.0" encoding="utf-8"?>

<com.huami.watch.train.ui.widget.FullScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--我的训练-->
        <TextView
            android:id="@+id/txt_my_train"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="22.5dp"
            style="@style/mytrain_trainplan_title"
            android:text="@string/my_train" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="23dp"
            android:weightSum="2"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    style="@style/train_plan_detail_train_title"
                    android:text="@string/train_days"
                    />
                <com.huami.watch.train.ui.widget.NumberTextView
                    android:id="@+id/number_train_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/train_plan_detail_train_number"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                style="@style/base_gray_line"
                android:layout_marginBottom="10dp"
                />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/train_mileage"
                    style="@style/train_plan_detail_train_title"
                    android:textAlignment="center"
                    />
                <com.huami.watch.train.ui.widget.NumberTextView
                    android:id="@+id/number_train_mils"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    style="@style/train_plan_detail_train_number"
                    android:textAlignment="center"
                    />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/start_new_train_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawablePadding="3dp"
            android:paddingTop="7dp"
            android:layout_marginTop="20dp"
            android:text="@string/start_new_train"
            android:drawableRight="@mipmap/training_list_new"
            android:background="@drawable/train_detail"/>


        <!--训练计划模板的内容-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_train_plans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <!--历史训练记录模板-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_history_records"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

</com.huami.watch.train.ui.widget.FullScrollView>